fixed overflow padding on footer

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@ html {
 .card article
   {
    height: 12em; 
-   background-color: rgba(0,0,0,0.75)
+   background-color: rgba(0,0,0,0.75);
+   padding-left: 1em;
   }
 
 .card p, .card h2
@@ -39,7 +40,7 @@ html {
 
 .card header, .card footer
   {
-      height:2.5em;
+      height:3em;
       padding:1em;
 
   }
@@ -48,7 +49,7 @@ html {
   {
     font-size: 1.5em;
     color: whitesmoke;
-    padding-left: 1em;
+    /*padding-left: 1em;*/
 
   }
 
@@ -60,7 +61,7 @@ html {
     border-radius: 1.5em 1.5em 0 0;
   }
 
-  .card header h2
+.card header h2
   {
     font-size: 2em;
     
@@ -72,6 +73,14 @@ html {
   {
     background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
     border-radius: 0 0 1.5em 1.5em;
+    
+    
+  }
+
+  .card footer p
+  { 
     font-size: 1.5em;
   }
+
+
   
